--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "src"
   ],
   "engines": {
-    "node": ">=10"
+    "node": "12.18.0"
   },
   "scripts": {
     "seedMovie": "ts-node src/seed/movie/movie_seed.ts",
-    "start": "ts-node dist/index.js",
+    "start": "node dist/index.js",
     "build": "tsdx build",
     "test": "ts-mocha ./test/**/* -p ./tsconfig.spec.json -r esm --exit --timeout 50000",
     "lint": "tsdx lint",
@@ -59,16 +59,19 @@
     "@google-cloud/storage": "^5.5.0",
     "@types/chai": "^4.2.14",
     "@types/chai-http": "^4.2.0",
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "@types/faker": "^5.1.4",
     "@types/mocha": "^8.0.4",
     "@types/mongodb": "^3.5.31",
     "@types/multer": "^1.4.4",
     "@types/uuid": "^8.3.0",
+    "aws-s3": "^2.0.5",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "collard_admin_models": "^1.2.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
@@ -80,6 +83,7 @@
     "reflect-metadata": "^0.1.13",
     "ts-mocha": "^8.0.0",
     "tsyringe": "^4.3.0",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "tslib": "^2.0.3"
   }
 }
